@@ -6,6 +6,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## [Unreleased]
+### Fixed
+- [SYSTEM] [NETWORK] Remaining NetworkAddress after Node deletion
 
 
 ## [2.34.4] - 2025-12-17
